Добавил сущности OAuthToken и User

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -89,6 +89,7 @@ spring-test = [
     "testcontainers-postgresql",
     "kotest-extensions-testcontainers"
 ]
+logging = ["kotlin-logging"]
 kotlinx-coroutines = ["kotlinx-coroutines-slf4j", "kotlinx-coroutines-reactor"]
 openapi-models = ["jackson-annotations"]
 openapi-client = [
