--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,11 +24,15 @@ kotest-extensions-spring = "1.1.2"
 kotest-extensions-testcontainers = "1.3.4"
 hibernate-utils = "3.2.0"
 hibernate-validator = "8.0.0.Final"
+kotlin-user-agents = "0.2.2"
+commons-collections4 = "4.4"
+krypto = "4.0.0-rc5"
 
 [libraries]
 spring-boot-starter-data-jpa = { group = "org.springframework.boot", name = "spring-boot-starter-data-jpa" }
 spring-context-indexer = { group = "org.springframework", name = "spring-context-indexer" }
 spring-aspects = { group = "org.springframework", name = "spring-aspects" }
+spring-boot-starter = { group = "org.springframework.boot", name = "spring-boot-starter" }
 spring-boot-starter-web = { group = "org.springframework.boot", name = "spring-boot-starter-web" }
 spring-boot-starter-webflux = { group = "org.springframework.boot", name = "spring-boot-starter-webflux" }
 spring-boot-starter-security = { group = "org.springframework.boot", name = "spring-boot-starter-security" }
@@ -68,6 +72,8 @@ hibernate-validator = { group = "org.hibernate.validator", name = "hibernate-val
 jjwt-api = { group = "io.jsonwebtoken", name = "jjwt-api", version.ref = "jjwt-api" }
 jjwt-impl = { group = "io.jsonwebtoken", name = "jjwt-impl", version.ref = "jjwt-api" }
 jjwt-jackson = { group = "io.jsonwebtoken", name = "jjwt-jackson", version.ref = "jjwt-api" }
+kotlin-user-agents = { group = "ru.chermenin", name = "kotlin-user-agents", version.ref = "kotlin-user-agents" }
+krypto = { group = "com.soywiz.korlibs.krypto", name = "krypto-jvm", version.ref = "krypto" }
 
 [bundles]
 spring-jpa = ["postgresql", "liquibase", "spring-boot-starter-data-jpa", "hibernate-utils", "hibernate-validator"]
