--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
+.idea
 .idea/*
 .idea/modules.xml
 .idea/jarRepositories.xml
@@ -41,3 +42,10 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+### Env ###
+!example.env
+local.env
+
+### Docker ###
+docker/prs/db
