--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,11 +24,16 @@ kotest-extensions-spring = "1.1.2"
 kotest-extensions-testcontainers = "1.3.4"
 hibernate-utils = "3.2.0"
 hibernate-validator = "8.0.0.Final"
+kotlin-user-agents = "0.2.2"
+commons-collections4 = "4.4"
+krypto = "4.0.0-rc5"
+hazelcast-all = "4.2.7"
 
 [libraries]
 spring-boot-starter-data-jpa = { group = "org.springframework.boot", name = "spring-boot-starter-data-jpa" }
 spring-context-indexer = { group = "org.springframework", name = "spring-context-indexer" }
 spring-aspects = { group = "org.springframework", name = "spring-aspects" }
+spring-boot-starter = { group = "org.springframework.boot", name = "spring-boot-starter" }
 spring-boot-starter-web = { group = "org.springframework.boot", name = "spring-boot-starter-web" }
 spring-boot-starter-webflux = { group = "org.springframework.boot", name = "spring-boot-starter-webflux" }
 spring-boot-starter-security = { group = "org.springframework.boot", name = "spring-boot-starter-security" }
@@ -38,6 +43,7 @@ spring-boot-configuration-processor = { group = "org.springframework.boot", name
 commons-codec = { group = "commons-codec", name = "commons-codec" }
 postgresql = { group = "org.postgresql", name = "postgresql" }
 liquibase = { group = "org.liquibase", name = "liquibase-core" }
+hazelcast = { group = "com.hazelcast", name = "hazelcast-all", version.ref = "hazelcast-all" }
 jackson-kotlin = { group = "com.fasterxml.jackson.module", name = "jackson-module-kotlin" }
 kotlin-mockito = { group = "org.mockito.kotlin", name = "mockito-kotlin", version.ref = "kotlin-mockito" }
 kotlin-logging = { group = "io.github.microutils", name = "kotlin-logging-jvm", version.ref = "kotlin-logging" }
@@ -68,11 +74,13 @@ hibernate-validator = { group = "org.hibernate.validator", name = "hibernate-val
 jjwt-api = { group = "io.jsonwebtoken", name = "jjwt-api", version.ref = "jjwt-api" }
 jjwt-impl = { group = "io.jsonwebtoken", name = "jjwt-impl", version.ref = "jjwt-api" }
 jjwt-jackson = { group = "io.jsonwebtoken", name = "jjwt-jackson", version.ref = "jjwt-api" }
+kotlin-user-agents = { group = "ru.chermenin", name = "kotlin-user-agents", version.ref = "kotlin-user-agents" }
+krypto = { group = "com.soywiz.korlibs.krypto", name = "krypto-jvm", version.ref = "krypto" }
 
 [bundles]
 spring-jpa = ["postgresql", "liquibase", "spring-boot-starter-data-jpa", "hibernate-utils", "hibernate-validator"]
 spring-web = [
-    "spring-boot-starter-security", "spring-boot-starter-web", "spring-boot-starter-webflux", "jackson-kotlin", "spring-boot-starter-actuator",
+    "spring-boot-starter-security", "spring-boot-starter-web", "spring-boot-starter-webflux", "spring-boot-configuration-processor", "jackson-kotlin", "spring-boot-starter-actuator",
     "jackson-kotlin", "kotlinx-datetime"
 ]
 spring-aspects = ["spring-aspects"]
@@ -89,6 +97,7 @@ spring-test = [
     "testcontainers-postgresql",
     "kotest-extensions-testcontainers"
 ]
+logging = ["kotlin-logging"]
 kotlinx-coroutines = ["kotlinx-coroutines-slf4j", "kotlinx-coroutines-reactor"]
 openapi-models = ["jackson-annotations"]
 openapi-client = [
