--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -38,3 +38,10 @@ logging:
 demo:
   data:
     path: classpath*:/checklists/*
+
+open-ai:
+  token: ${OPEN_AI_TOKEN}
+  logging-level: All
+  model-id: gpt-3.5-turbo
+  temperature-matrix: 0.2
+  temperature-questions: 1.2
