--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -45,3 +45,6 @@ open-ai:
   model-id: gpt-3.5-turbo
   temperature-matrix: 0.2
   temperature-questions: 1.2
+
+prs:
+  max_questions_count: ${PRS_MAX_QUESTIONS_COUNT:30}
